--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -685,6 +685,7 @@ the strings?).
  Matthew H 5.31.8       2020-Jan-20
  Renee     5.31.9       2020-Feb-20
  Sawyer X  5.31.10      2020-Mar-20
+ Sawyer X  5.31.11      2020-Apr-28
 
 =head2 SELECTED RELEASE SIZES
 
