--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -19,8 +19,8 @@ Code freezes (which happen in the 5.31.X series)
   2020-02-20  5.31.9 ✓        User-visible changes to correctly
                               functioning programs freeze
   2020-03-20  5.31.10 ✓       Full code freeze
-  2020-04-20  5.31.11         Full code freeze (clearing BBCs)
-  2020-05-20  5.32.0          Stable release!
+  2020-04-20  5.31.11 ✓       Full code freeze (clearing BBCs)
+  2020-05-20  5.32.0          Stable release! (Hopefully)
 
 =head2 Perl 5.30
 
