--- a/pod/perl.pod
+++ b/pod/perl.pod
@@ -181,6 +181,7 @@ aux h2ph h2xs perlbug pl2pm pod2html pod2man splain xsubpp
 
     perlhist		Perl history records
     perldelta		Perl changes since previous version
+    perl53111delta	Perl changes in version 5.31.11
     perl53110delta	Perl changes in version 5.31.10
     perl5319delta	Perl changes in version 5.31.9
     perl5318delta	Perl changes in version 5.31.8
