--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -6476,80 +6476,14 @@ also be escaped to avoid confusing the parser, for example,
 
  qr{abc\{def\}ghi}
 
-Forcing literal C<"{"> characters to be escaped will enable the Perl
+Forcing literal C<"{"> characters to be escaped enables the Perl
 language to be extended in various ways in future releases.  To avoid
 needlessly breaking existing code, the restriction is is not enforced in
 contexts where there are unlikely to ever be extensions that could
 conflict with the use there of C<"{"> as a literal.  Those that are
-not potentially ambiguous do not warn; those that are do raise a
-non-deprecation warning.
-
-In this release of Perl, some literal uses of C<"{"> are fatal, and some
-still just deprecated.  This is because of an oversight:  some uses of a
-literal C<"{"> that should have raised a deprecation warning starting in
-v5.20 did not warn until v5.26.  By making the already-warned uses fatal
-now, some of the planned extensions can be made to the language sooner.
-The cases which are still allowed will be fatal in Perl 5.32.
-
-The contexts where no warnings or errors are raised are:
-
-=over 4
-
-=item *
-
-as the first character in a pattern, or following C<"^"> indicating to
-anchor the match to the beginning of a line.
-
-=item *
-
-as the first character following a C<"|"> indicating alternation.
-
-=item *
-
-as the first character in a parenthesized grouping like
-
- /foo({bar)/
- /foo(?:{bar)/
-
-=item *
-
-as the first character following a quantifier
-
- /\s*{/
-
-=back
-
-=for comment
-The text of the message above is duplicated below to allow splain (and
-'use diagnostics') to work.  Since one is deprecated, and one not, khw
-thinks they can't be combined as one message.
-
-=item Unescaped left brace in regex is deprecated here (and will be fatal in Perl 5.32), passed through in regex; marked by S<<-- HERE> in m/%s/
-
-(D deprecated, regexp)  The simple rule to remember, if you want to
-match a literal C<"{"> character (U+007B C<LEFT CURLY BRACKET>) in a
-regular expression pattern, is to escape each literal instance of it in
-some way.  Generally easiest is to precede it with a backslash, like
-C<"\{"> or enclose it in square brackets (C<"[{]">).  If the pattern
-delimiters are also braces, any matching right brace (C<"}">) should
-also be escaped to avoid confusing the parser, for example,
-
- qr{abc\{def\}ghi}
-
-Forcing literal C<"{"> characters to be escaped will enable the Perl
-language to be extended in various ways in future releases.  To avoid
-needlessly breaking existing code, the restriction is is not enforced in
-contexts where there are unlikely to ever be extensions that could
-conflict with the use there of C<"{"> as a literal.  Those that are
-not potentially ambiguous do not warn; those that are do raise a
-non-deprecation warning.
-
-In this release of Perl, some literal uses of C<"{"> are fatal, and some
-still just deprecated.  This is because of an oversight:  some uses of a
-literal C<"{"> that should have raised a deprecation warning starting in
-v5.20 did not warn until v5.26.  By making the already-warned uses fatal
-now, some of the planned extensions can be made to the language sooner.
-The cases which are still allowed will be fatal in Perl 5.32.
+not potentially ambiguous do not warn; those that are raise this
+warning.  This makes sure that an inadvertent typo doesn't silently
+cause the pattern to compile to something unintended.
 
 The contexts where no warnings or errors are raised are:
 
@@ -6598,20 +6532,13 @@ also be escaped to avoid confusing the parser, for example,
 
  qr{abc\{def\}ghi}
 
-Forcing literal C<"{"> characters to be escaped will enable the Perl
+Forcing literal C<"{"> characters to be escaped enables the Perl
 language to be extended in various ways in future releases.  To avoid
 needlessly breaking existing code, the restriction is is not enforced in
 contexts where there are unlikely to ever be extensions that could
 conflict with the use there of C<"{"> as a literal.  Those that are
 not potentially ambiguous do not warn; those that are do raise a
 non-deprecation warning.
-
-In this release of Perl, some literal uses of C<"{"> are fatal, and some
-still just deprecated.  This is because of an oversight:  some uses of a
-literal C<"{"> that should have raised a deprecation warning starting in
-v5.20 did not warn until v5.26.  By making the already-warned uses fatal
-now, some of the planned extensions can be made to the language sooner.
-The cases which are still allowed will be fatal in Perl 5.32.
 
 The contexts where no warnings or errors are raised are:
 
