Fixed typemap in perlxs.
Fixed quoting and string concatenation mistakes in C++ typemap in perlxs.

Committer: Håkon Hægland is now a Perl author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -486,6 +486,7 @@ Guy Decoux                     <decoux@moulon.inra.fr>
 Gwyn Judd                      <b.judd@xtra.co.nz>
 H.J. Lu                        <hjl@nynexst.com>
 H.Merijn Brand                 <h.m.brand@xs4all.nl>
+Håkon Hægland                  <hakon.hagland@gmail.com>
 Hal Morris                     <hom00@utsglobal.com>
 Hal Pomeranz                   <pomeranz@netcom.com>
 Hallvard B Furuseth            <h.b.furuseth@usit.uio.no>
