typo "set_locale" should be "setlocale"
(Committer changed author address to the already-known @cpan one, so
this would pass porting tests.)

--- a/pod/perllocale.pod
+++ b/pod/perllocale.pod
@@ -484,7 +484,7 @@ be noticed, depending on your system's C library.
 Note that when a form of C<use locale> that doesn't include all
 categories is specified, Perl ignores the excluded categories.
 
-If C<set_locale()> fails for some reason (for example, an attempt to set
+If C<setlocale()> fails for some reason (for example, an attempt to set
 to a locale unknown to the system), the locale for the category is not
 changed, and the function returns C<undef>.
 
