Change bug URL from rt.perl.org to https://rt.perl.org
This updates the bug tracker URL from http://rt.perl.org
to https://rt.perl.org.

There is a place in the code, in corelist.pl, that is sensitive
to the URL of the bug tracker. This now understands both
versions of the bug tracker URL. Ideally, this will be
consolidated once the dust settles.

This patch also updates ExtUtils::CBuilder, Safe, threads
and threads::shared to point to the new bug tracker URL.

(manually cherry picked from commit 94a9f2548520fd4599cb228c9e1608f4f0def4f3)

--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -143,7 +143,7 @@ Andreas' email address at:
 
 =head3 rt.perl.org update access
 
-Make sure you have permission to close tickets on L<http://rt.perl.org/>
+Make sure you have permission to close tickets on L<https://rt.perl.org/>
 so you can respond to bug reports as necessary during your stint.  If you
 don't, make an account (if you don't have one) and contact the pumpking
 with your username to get ticket-closing permission.
