--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -653,6 +653,7 @@ the strings?).
  Steve     5.28.1       2018-Nov-29
  Steve     5.28.2-RC1   2019-Apr-05
  Steve     5.28.2       2019-Apr-19
+ Steve     5.28.3-RC1   2020-May-18
 
  Sawyer X  5.29.0       2018-Jun-26     The 5.29 development track
  Steve     5.29.1       2018-Jul-20
