--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -673,6 +673,7 @@ the strings?).
  Steve     5.30.1       2019-Nov-10
  Steve     5.30.2-RC1   2020-Feb-29
  Steve     5.30.2       2020-Mar-14
+ Steve     5.30.3-RC1   2020-May-18
 
  Sawyer X  5.31.0       2019-May-24     The 5.31 development track
  Ether     5.31.1       2019-Jun-20
