Update perlfaq to CPAN version 5.20200523
  [DELTA]

5.20200523  2020-05-22 03:28:54Z
  * switch perlbug references to GitHub issue tracker (PR##87, Dan Book)

5.20200522  2020-05-22 02:24:31Z
  * updated perlfaq1 entry on Raku (PR##86, Dan Book)

--- a/cpan/perlfaq/lib/perlfaq3.pod
+++ b/cpan/perlfaq/lib/perlfaq3.pod
@@ -4,7 +4,7 @@ perlfaq3 - Programming Tools
 
 =head1 VERSION
 
-version 5.20200125
+version 5.20200523
 
 =head1 DESCRIPTION
 
@@ -1098,7 +1098,8 @@ XS support files.
 
 Download the ExtUtils::Embed kit from CPAN and run `make test'. If
 the tests pass, read the pods again and again and again. If they
-fail, see L<perlbug> and send a bug report with the output of
+fail, submit a bug report to L<https://github.com/Perl/perl5/issues>
+with the output of
 C<make test TEST_VERBOSE=1> along with C<perl -V>.
 
 =head2 When I tried to run my script, I got this message. What does it mean?
