--- a/pod/perlcommunity.pod
+++ b/pod/perlcommunity.pod
@@ -39,9 +39,9 @@ own IRC network, L<irc://irc.perl.org>. General (not help-oriented) chat can be
 found at L<irc://irc.perl.org/#perl>. Many other more specific chats are also
 hosted on the network. Information about irc.perl.org is located on the
 network's website: L<https://www.irc.perl.org>. For a more help-oriented #perl,
-check out L<irc://irc.freenode.net/#perl>. Perl 6 development also has a
-presence in L<irc://irc.freenode.net/#perl6>. Most Perl-related channels will
-be kind enough to point you in the right direction if you ask nicely.
+check out L<irc://irc.freenode.net/#perl>. Raku development also has a
+presence in L<irc://irc.freenode.net/#raku-dev>. Most Perl-related channels
+will be kind enough to point you in the right direction if you ask nicely.
 
 Any large IRC network (Dalnet, EFnet) is also likely to have a #perl channel,
 with varying activity levels.
