--- a/pod/perlre.pod
+++ b/pod/perlre.pod
@@ -2829,7 +2829,7 @@ As a shortcut C<(*MARK:I<NAME>)> can be written C<(*:I<NAME>)>.
 
 =item C<(*THEN)> C<(*THEN:I<NAME>)>
 
-This is similar to the "cut group" operator C<::> from Perl 6.  Like
+This is similar to the "cut group" operator C<::> from Raku.  Like
 C<(*PRUNE)>, this verb always matches, and when backtracked into on
 failure, it causes the regex engine to try the next alternation in the
 innermost enclosing group (capturing or otherwise) that has alternations.
@@ -2865,7 +2865,7 @@ backtrack and try I<C>; but the C<(*PRUNE)> verb will simply fail.
 =item C<(*COMMIT)> C<(*COMMIT:I<arg>)>
 X<(*COMMIT)>
 
-This is the Perl 6 "commit pattern" C<< <commit> >> or C<:::>. It's a
+This is the Raku "commit pattern" C<< <commit> >> or C<:::>. It's a
 zero-width pattern similar to C<(*SKIP)>, except that when backtracked
 into on failure it causes the match to fail outright. No further attempts
 to find a valid match by advancing the start pointer will occur again.
