--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -654,6 +654,7 @@ the strings?).
  Steve     5.28.2-RC1   2019-Apr-05
  Steve     5.28.2       2019-Apr-19
  Steve     5.28.3-RC1   2020-May-18
+ Steve     5.28.3       2020-Jun-01
 
  Sawyer X  5.29.0       2018-Jun-26     The 5.29 development track
  Steve     5.29.1       2018-Jul-20
