--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -268,6 +268,11 @@ have been sped up.
 
 C<grok_number_flags> has been sped up.
 
+=item *
+
+C<sort> is now noticeably faster in cases such as C<< sort {$a <=> $b} >> or
+C<< sort {$b <=> $a} >>. [L<GH #17608|https://github.com/Perl/perl5/pull/17608>]
+
 =back
 
 =head1 Modules and Pragmata
