--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -27,14 +27,14 @@ Code freezes (which happen in the 5.31.X series)
   2019-05-22  5.30.0 ✓        Sawyer X
   2019-11-10  5.30.1 ✓        Steve Hay
   2020-03-14  5.30.2 ✓        Steve Hay
-  2020-06-01  5.30.3          Steve Hay
+  2020-06-01  5.30.3 ✓        Steve Hay
 
 =head2 Perl 5.28
 
   2018-05-20  5.28.0 ✓        Sawyer X
   2018-11-29  5.28.1 ✓        Steve Hay
   2019-04-19  5.28.2 ✓        Steve Hay
-  2020-06-01  5.28.3          Steve Hay
+  2020-06-01  5.28.3 ✓        Steve Hay
 
 =head2 Perl 5.26
 
