--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -692,6 +692,7 @@ the strings?).
  Sawyer X  5.31.11      2020-Apr-28
 
  Sawyer X  5.32.0-RC0   2020-May-30     The 5.20 maintenance track
+ Sawyer X  5.32.0-RC1   2020-Jun-07
 
 =head2 SELECTED RELEASE SIZES
 
