--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -17,6 +17,12 @@ Consult your favorite dictionary for details.
 
 =head1 EPIGRAPHS
 
+=head2 v5.32.0-RC1 - Coretta Scott King
+
+Announced on 2020-06-08 by Sawyer X
+
+Struggle is a never ending process. Freedom is never really won, you earn it and win it in every generation.
+
 =head2 v5.32.0-RC0 - Franz Kafka
 
 Announced on 2020-05-30 by Sawyer X
