Add Thibault Duponchelle to AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1220,6 +1220,7 @@ Tels                           <nospam-abuse@bloodgate.com>
 Teun Burgers                   <burgers@ecn.nl>
 Thad Floryan                   <thad@thadlabs.com>
 Theo Buehler                   <theo@math.ethz.ch>
+Thibault Duponchelle           <thibault.duponchelle@gmail.com>
 Thomas Bowditch                <bowditch@inmet.com>
 Thomas Conté                   <tom@fr.uu.net>
 Thomas Dorner                  <Thomas.Dorner@start.de>
