--- a/AUTHORS
+++ b/AUTHORS
@@ -537,6 +537,7 @@ Ingo Weinhold                  <ingo_weinhold@gmx.de>
 Ingy döt Net                   <ingy@ttul.org>
 insecure                       <insecure@mail.od.ua>
 Irving Reid                    <irving@tor.securecomputing.com>
+Ivan Baidakou                  @basiliscos
 Ivan Kurmanov                  <kurmanov@openlib.org>
 Ivan Pozdeev                   <vano@mail.mipt.ru>
 Ivan Tubert-Brohman            <itub@cpan.org>
