Small fixup to explain conference names

--- a/pod/perlcommunity.pod
+++ b/pod/perlcommunity.pod
@@ -140,12 +140,15 @@ because someone will forget.
 
 =head2 Conventions
 
-Perl has two major annual conventions: The Perl Conference (now part of OSCON),
+Perl had two major annual conventions: The Perl Conference (now part of OSCON),
 put on by O'Reilly, and Yet Another Perl Conference or YAPC (pronounced
 yap-see), which is localized into several regional YAPCs (North America,
 Europe, Asia) in a stunning grassroots display by the Perl community. For more
 information about either conference, check out their respective web pages:
 OSCON L<https://www.oreilly.com/conferences/>; YAPC L<https://www.yapc.org>.
+
+In 2016, YAPC was rebranded as The Perl Conference again. It is now referred
+to as The Perl and Raku Conference.
 
 A relatively new conference franchise with a large Perl portion is the
 Open Source Developers Conference or OSDC. First held in Australia it has
