--- a/AUTHORS
+++ b/AUTHORS
@@ -671,6 +671,7 @@ Joost van Baal			<J.E.vanBaal@uvt.nl>
 Jörg Walter			<jwalt@cpan.org>
 Jos I. Boumans			<kane@dwim.org>
 Jose Auguste-Etienne		<Jose.auguste-etienne@cgss-guyane.fr>
+José Palao		<jose@palao.com>
 José Pedro Oliveira		<jpo@di.uminho.pt>
 Joseph N. Hall			<joseph@cscaper.com>
 Joseph S. Myers			<jsm28@hermes.cam.ac.uk>
