Plan9/9front i386 fixes

--- a/AUTHORS
+++ b/AUTHORS
@@ -1104,6 +1104,7 @@ Rocco Caputo                   <troc@netrus.net>
 Roderick Schertler             <roderick@argon.org>
 Rodger Anderson                <rodger@boi.hp.com>
 Rodolfo Carvalho               <rhcarvalho@gmail.com>
+Romano                         <unobe@cpan.org>
 Ronald F. Guilmette            <rfg@monkeys.com>
 Ronald J. Kimball              <rjk@linguist.dartmouth.edu>
 Ronald Schmidt                 <RonaldWS@aol.com>
