https://github.com/Perl/perl7 will not exist

--- a/Changes
+++ b/Changes
@@ -8,7 +8,7 @@ For a list of contributors to perl, see AUTHORS.
 
 If you need a detailed commit history (i.e. descriptions of each
 individual commit),  you can view the git version control history online
-at https://github.com/Perl/perl7.  Or, you can download a copy of the git
+at https://github.com/Perl/perl.  Or, you can download a copy of the git
 repository and then run a command like
 
     git log --name-status v5.12.0..v5.14.0
