Kivanc Yazan and Marc Chantreux are now Perl authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -737,6 +737,7 @@ Kevin White                    <klwhite@magnus.acs.ohio-state.edu>
 Kim Frutiger
 Kingpin                        <mthurn@copper.dulles.tasc.com>
 Kirrily Robert                 <skud@infotrope.net>
+Kivanc Yazan                   <kyzn@cpan.org>
 Kiyotaka Sakai                 <ksakai@netwk.ntt-at.co.jp>
 kmx                            <kmx@volny.cz>
 Kragen Sitaker                 <kragen@pobox.com>
@@ -782,6 +783,7 @@ Makoto MATSUSHITA              <matusita@ics.es.osaka-u.ac.jp>
 Malcolm Beattie                <mbeattie@sable.ox.ac.uk>
 Manuel Mausz                   <manuel@mausz.at>
 Manuel Valente                 <mvalente@idealx.com>
+Marc Chantreux                 <eiro@phear.org>
 Marc Green                     <marcgreen@cpan.org>
 Marc Lehmann                   <pcg@goof.com>
 Marc Paquette                  <Marc.Paquette@Softimage.COM>
