Add Scott Baker to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1125,6 +1125,7 @@ Santtu Ojanperä                <santtuojanpera98@gmail.com>
 Sawyer X                       <xsawyerx@cpan.org>
 Schuyler Erle                  <schuyler@oreilly.com>
 Scott A Crosby                 <scrosby@cs.rice.edu>
+Scott Baker                    <scott@perturb.org>
 Scott Bronson                  <bronson@rinspin.com>
 Scott Gifford                  <sgifford@tir.com>
 Scott Henry                    <scotth@sgi.com>
